# fpga-builder

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CircuitSerializer.cpp  CircuitSerializer.h  EXPORT.v  ErrorManager.cpp  ErrorManager.h  GUID.cpp  GUID.h  Link.cpp  Link.h  Module.cpp  Module.h  Pin.cpp  Pin.h  PinDataType.h  Renderer.cpp  Renderer.h  circuit.json  main.cpp
Codegen/: Codegen.cpp  Codegen.h  TraversePrint.cpp  TraversePrint.h  Visitor.h
Default/: AdderNode.h  ClockNode.h  CombinerNode.h  CounterNode.h  DFFNode.h  DebounceNode.h  EdgeNode.h  InputNode.cpp  InputNode.h  LiteralNode.h  MultiplexerNode.h  Node.cpp  Node.h  OutputNode.cpp  OutputNode.h  SplitterNode.h
Default/BinaryOperator/: AndNode.h  BinaryOpNode.cpp  BinaryOpNode.h  NorNode.h  OrNode.h  XOrNode.h
Default/UnaryOperator/: NotNode.h  UnaryOpNode.cpp  UnaryOpNode.h
Pins/: PinDataType.h
Project/: alu_carry.json  alu_mux.json  bitwise_ops.json  circuit.json  circuit2.json  flag_register.json  main_module.json  new_module3.json  project.fpgabuilder  register_bank1.json  register_bank2.json  registers.json  test_circ.json
Project/ROMS/: wave.mem
src/: CircuitSerializer.cpp  CircuitSerializer.h  ConfigManager.cpp  CopyPasteManager.cpp  CopyPasteManager.h  ErrorManager.h  GUID.cpp  GUID.h  Link.cpp  Link.h  Module.cpp  Module.h  Renderer.h  main.cpp  pch.h
src/Codegen/: Codegen.cpp  Codegen.h  TraversePrint.cpp  Visitor.h
src/Default/: AdderNode.h  ClockNode.h  CombinerNode.h  ConfigurableBitWidthNode.h  ConfigurableBitWithNode.h  ConfigurableDataAndNumInputsNode.h  ConfigurableDataAndSelectBitWidthNode.h  CounterNode.h  CustomModuleNode.h  DFFNode.h  DebounceNode.h  DecoderNode.h  EdgeNode.h  InputNode.cpp  InputNode.h  LiteralNode.h  MultiplexerNode.h  MultiplierNode.h  Node.cpp  Node.h  OutputNode.cpp  OutputNode.h  ROMNode.h  RegisterNode.h  SplitterNode.h  SubtractorNode.h
src/Default/BinaryOperator/: AndNode.h  BinaryOpNode.cpp  BinaryOpNode.h  NandNode.h  NorNode.h  OrNode.h  XOrNode.h
src/Default/UnaryOperator/: NotNode.h  UnaryOpNode.cpp  UnaryOpNode.h
src/Pins/: Pin.cpp  Pin.h  PinDataType.cpp  PinDataType.h
src/Project/: Project.cpp  Project.h
src/UI/: ConfigManager.cpp  ConfigManager.h  ErrorManager.cpp  ErrorManager.h  ModuleUI.cpp  NodeUI.cpp  OutputViewer.cpp  OutputViewer.h  ProjectUI.cpp  Renderer.cpp  Renderer.h  Toolbox.cpp  Toolbox.h  Topbar.cpp  Topbar.h
src/UI/Lib/: ImGuiNotify.h  TextEditor.cpp  TextEditor.h
